@@ -1,31 +1,22 @@
 package ru.nsu.zenin.snake.model;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.ArrayDeque;
+import java.util.Deque;
 import ru.nsu.zenin.collection.Point2D;
 
 public class Snake {
-    private final List<Point2D> segments;
+    private final Deque<Point2D> segments;
     private Integer targetSize;
     private Direction direction;
 
     private Integer ticksToMove;
+    private Integer counter = 0;
     private Integer score = 0;
 
     public Snake(Point2D head, Direction direction, Integer ticksToMove) {
-        segments = new ArrayList<Point2D>();
-        segments.add(head);
+        segments = new ArrayDeque<Point2D>();
+        segments.addFirst(head);
         targetSize = 1;
-        this.direction = direction;
-        this.ticksToMove = ticksToMove;
-    }
-
-    public Snake(List<Point2D> segments, Direction direction, Integer ticksToMove) {
-        if (segments.isEmpty()) {
-            // TODO: Throw
-        }
-        this.segments = segments;
-        this.targetSize = segments.size();
         this.direction = direction;
         this.ticksToMove = ticksToMove;
     }
@@ -55,27 +46,38 @@ public class Snake {
         }
     }
 
-    public void move() {
-        if (segments.size() == targetSize) {
-            segments.remove(segments.size() - 1);
-        } else if (segments.size() > targetSize) {
-            segments.remove(segments.size() - 1);
-            segments.remove(segments.size() - 1);
-        }
+    public void tick(GameField field) {
+        if (counter >= ticksToMove) {
+            if (segments.size() == targetSize) {
+                field.setTileState(segments.pop(), new GameField.TileState.Free());
+            } else if (segments.size() > targetSize) {
+                field.setTileState(segments.pop(), new GameField.TileState.Free());
+                field.setTileState(segments.pop(), new GameField.TileState.Free());
+            }
 
-        Point2D currHead = segments.get(0);
-        Point2D nextHead =
-                switch (this.direction) {
-                    case UP -> new Point2D(currHead.x(), currHead.y() - 1);
-                    case DOWN -> new Point2D(currHead.x(), currHead.y() + 1);
-                    case RIGHT -> new Point2D(currHead.x() + 1, currHead.y());
-                    case LEFT -> new Point2D(currHead.x() - 1, currHead.y());
-                };
-        segments.add(0, nextHead);
+            Point2D currHead = segments.getFirst();
+            Point2D nextHead =
+                    switch (this.direction) {
+                        case UP -> new Point2D(currHead.x(), currHead.y() - 1);
+                        case DOWN -> new Point2D(currHead.x(), currHead.y() + 1);
+                        case RIGHT -> new Point2D(currHead.x() + 1, currHead.y());
+                        case LEFT -> new Point2D(currHead.x() - 1, currHead.y());
+                    };
+            segments.addFirst(nextHead);
+            field.setTileState(nextHead, new GameField.TileState.OccupiedBySnake(this));
+
+            counter = 0;
+        } else {
+            counter++;
+        }
     }
 
     public Point2D getHead() {
-        return segments.get(0);
+        return segments.getFirst();
+    }
+
+    public Deque<Point2D> getSegments() {
+        return segments;
     }
 
     public enum Direction {
